@@ -1157,13 +1157,10 @@ If optional argument SUBTYPE is not nil, text/SUBTYPE tag is inserted."
 	  (disposition-type (nth 4 guess))
 	  (disposition-params (nth 5 guess))
 	  )
-    (if verbose
-	(setq type    (mime-prompt-for-type type)
-	      subtype (mime-prompt-for-subtype type subtype)
-	      ))
     (if (or (interactive-p) verbose)
-	(setq encoding (mime-prompt-for-encoding encoding))
-      )
+	(setq type (mime-prompt-for-type type)
+	      subtype (mime-prompt-for-subtype type subtype)
+	      encoding (mime-prompt-for-encoding encoding)))
     (if (or (consp parameters) (stringp disposition-type))
 	(let ((rest parameters) cell attribute value)
 	  (setq parameters "")
